[gd_scene load_steps=3 format=3 uid="uid://0lcjsm24qip4"]

[ext_resource type="Script" path="res://user_interface/main_menu.gd" id="1_udwvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luo3e"]
bg_color = Color(0.211765, 0.235294, 0.298039, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udwvv")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0.5, 0.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_luo3e")

[node name="Column" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SaveGame" type="Button" parent="Panel/Column"]
layout_mode = 2
size_flags_vertical = 4
text = "Save Game"

[node name="LoadGame" type="Button" parent="Panel/Column"]
layout_mode = 2
size_flags_vertical = 4
text = "Load Game"

[node name="Resume" type="Button" parent="Panel/Column"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Resume"

[connection signal="pressed" from="Panel/Column/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Panel/Column/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/Column/Resume" to="." method="_on_resume_pressed"]
